--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
         async function setupCamera() {
             try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+                const stream = await navigator.mediaDevices.getUserMedia({
+                    video: { facingMode: { ideal: 'environment' } } // Use back camera on mobile
+                });
                 video.srcObject = stream;
                 return new Promise(resolve => video.onloadedmetadata = resolve);
             } catch (error) {
